[project]
name = "hideandseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-tree>=0.1.9",
    "gymnasium>=1.1.1",
    "lz4>=4.4.4",
    "mpe2>=0.0.1",
    "pettingzoo>=1.25.0",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "ray[tune]==2.44.1",
    "scipy>=1.15.3",
    "setuptools==80.8.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126" },
]

